language/src/test/programs/error/parser/eval_without_arm.rngl
fn main():
    let x = eval:
    ret x